# The-Plazza

./: CMakeLists.txt  Makefile  README.md
QT/: menu.txt
QT/Plazza/: Makefile  Plazza  Plazza.pro  main.cpp  moc_plazzagui.cpp  plazza.qrc  plazzagui.cpp  plazzagui.h  plazzagui.ui  qrc_plazza.cpp  ui_plazzagui.h
QT/build-Plazza-Desktop-Debug/: Makefile  Plazza  moc_plazzagui.cpp  ui_plazzagui.h
inc/: AbstractPacketHandler.h  AwesomeMessage.h  ConnectSuccessMessage.h  DestroyProcessMessage.h  HelloConnectMessage.h  Logger.h  MasterPacketHandler.h  NetworkBuffer.h  NetworkClient.h  NetworkMessage.h  NetworkProtocol.h  NetworkServer.h  NetworkSocket.h  PacketHandler.h  SearchRequestMessage.h  SearchResultMessage.h  Shared.h  SlavePacketHandler.h  SlaveWorker.h  Task.h  TaskDispatcher.h  ThreadPoolExecutor.h  Timer.h
include/: AbstractPacketHandler.h  FreePlaceMessage.h  MasterPacketHandler.h  NetworkBuffer.h  NetworkServer.h  ThreadPoolExecutor.h  Timer.h  XorCipher.h
res/: test_ipaddress  test_phone  unit_email.sh  unit_ipaddress.sh  unit_phone.sh
resources/: test_ciphered_ip  test_email  test_ipaddress  unit_ipaddress.sh
src/: Logger.cpp  Main.cpp  NetworkBuffer.cpp  NetworkClient.cpp  NetworkProtocol.cpp  NetworkServer.cpp  PacketHandler.cpp
src/crypto/: XorCipher.cpp
src/handlers/: MasterPacketHandler.cpp  SlavePacketHandler.cpp
src/netwotk/: AbstractPacketHandler.cpp  NetworkBuffer.cpp  NetworkClient.cpp  NetworkProtocol.cpp  NetworkServer.cpp  NetworkSocket.cpp
src/process/: SlaveWorker.cpp  Task.cpp  TaskDispatcher.cpp  ThreadPool.cpp  ThreadPool.h  ThreadPoolExecutor.cpp  Timer.cpp
src/protocol/: AwesomeMessage.cpp  ConnectSuccessMessage.cpp  DestroyProcessMessage.cpp  FreePlaceMessage.cpp  HelloConnectMessage.cpp  SearchRequestMessage.cpp  SearchResultMessage.cpp
src/shared/: AbstractPacketHandler.cpp  NetworkBuffer.cpp  NetworkProtocol.cpp
